tests/NormalTests/paczka1/small_fuzzy/81443140.err
Error in line 3: 9FIp A744 69,7
Error in line 6: 9FIp A994 13,0
Error in line 9: R6vAOEcBJjL S331 26,6
